--- a/HTML-CSS/11. Cas/index.html
+++ b/HTML-CSS/11. Cas/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet"> -->
+    <title>11. Cas</title>
 </head>
 <body>
     
     <div class="glavni">
-        <h1>Naslov danasnjeg casa</h1>
+        <h1>Eksterni font slova (google font)</h1>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, molestias perferendis! Nemo, libero eaque cupiditate obcaecati amet soluta necessitatibus
+        <p class="glavni p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, molestias perferendis! Nemo, libero eaque cupiditate obcaecati amet soluta necessitatibus
             expedita molestiae modi sunt neque, ipsa at consequatur quam perferendis id!</p>
-            
     </div>
 
 </body>
