--- a/HTML-CSS/11. Cas/index.html
+++ b/HTML-CSS/11. Cas/index.html
@@ -14,9 +14,7 @@
     
     <div class="glavni">
         <h1>Eksterni font slova (google font)</h1>
-
-        <p class="glavni p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, molestias perferendis! Nemo, libero eaque cupiditate obcaecati amet soluta necessitatibus
-            expedita molestiae modi sunt neque, ipsa at consequatur quam perferendis id!</p>
+        <p class="glavni-p">Lorem ipsum dolor sit. Provident, molestias perferendis! Nemo</p>
     </div>
 
 </body>
