--- a/HTML-CSS/11. Cas/domaci.html
+++ b/HTML-CSS/11. Cas/domaci.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    <link rel="stylesheet" href="style2.css">
     <title>11. Cas - domaci</title>
 </head>
 <body>
@@ -24,7 +20,7 @@
         <br>
         <i class="fa fa-square-o ikon" aria-hidden="true">Kuca ima 86m <sup>2</sup> </i>
         <br>
-        <p>Za sve dodatne informacije pozovite broj telefona</p>
+        <p>Za sve dodatne informacije, <br> pozovite broj telefona</p>
         <br>
         <i class="fa fa-phone-square ikon" aria-hidden="true">+381 65 1982 730</i>
     </div>
