--- a/HTML-CSS/14. Cas/index1.html
+++ b/HTML-CSS/14. Cas/index1.html
@@ -11,11 +11,13 @@
     <div class="container">
         <img src="logo.png" alt="">
         
-        <a href="#"> Pocetna stranica </a>
-        <a href="#"> O nama </a>
-            <a href="#"> Kontakt </a>
-            <a href="#"> Forum </a>
-            <a href="https://www.google.com/" target="_blank">Idi na google</a>
+        <div class="child">
+            <a href="#"> Pocetna stranica </a>
+            <a href="#"> O nama </a>
+                <a href="#"> Kontakt </a>
+                <a href="#"> Forum </a>
+                <a href="https://www.google.com/" target="_blank">Idi na google</a>
+        </div>
     </div>
 </body>
 </html>
