--- a/HTML-CSS/23. Cas/index.html
+++ b/HTML-CSS/23. Cas/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>23. Cas</title>
 </head>
 <body>
@@ -18,6 +19,15 @@
     <!-- 
         za tablet ide (min-width: 500px), (max-width: 620px) 
     -->
+
+    <div class="parent">
+        <div class="box1 box"></div>
+        <div class="box2 box"></div>
+        <div class="box3 box"></div>
+        <div class="box4 box"></div>
+        <div class="box5 box"></div>
+        <div class="box6 box"></div>
+    </div> 
 
 </body>
 </html>
